<resources>
    <string name="app_name">quadratic_equation_test</string>
    <string name="variable_a">Введите a</string>
    <string name="variable_b">Введите b</string>
    <string name="variable_c">Введите c</string>
    <string name="calculate">Вычислить</string>
    <string name="detailed">Подробнее</string>
    <string name="button_back_to_main">Назад</string>
    <string name="decision">Решение:</string>
    <string name="equation_head">ax\u00B2 + bx + c = 0</string>
    <string name="formula">D = b * b - 4ac</string>
    <string name="discriminant">D = </string>
    <string name="discriminant_error">Поля не должны быть пусты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown_error">Ошибка, возможно вы ввели неверный символ</string>
</resources>
