<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:id="@+id/equation_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/equation_head"
            android:textSize="45sp" />

        <EditText
            android:id="@+id/variable_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/variable_a"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/variable_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/variable_b"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/variable_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/variable_c"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/calculate"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="130dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#D4CFD4"
            android:text="@string/calculate"
            android:drawableTop="@android:drawable/ic_menu_search" />

        <TextView
            android:id="@+id/discriminant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="D = 50"
            android:textSize="55sp"
            android:gravity="center" />

        <Button
            android:id="@+id/detailed"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="#D4CFD4"
            android:text="@string/detailed"
            android:visibility="gone"
            android:drawableBottom="@android:drawable/arrow_down_float" />


    </LinearLayout>
</FrameLayout>