<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fragment_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="@dimen/head_margin_vertical"
            android:text="@string/decision"
            android:textSize="@dimen/head_text" />

        <TextView
            android:id="@+id/discriminant_decision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/formula" />

        <TextView
            android:id="@+id/disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_disc_margin_top"
            android:gravity="center"
            android:textSize="@dimen/detail_disc_text"
            android:text="@string/discriminant" />

        <Button
            android:id="@+id/back_to_main"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_button_margin_top"
            android:backgroundTint="@color/button_bg"
            android:text="@string/button_back_to_main"
            android:drawableTop="@android:drawable/arrow_up_float"/>

    </LinearLayout>
</FrameLayout>
